# Manufacturing-Risk-Navigator

./: .env.example  .gitignore  pyproject.toml
app/: dependencies.py  main.py
app/api/v1/: analysis.py  health.py  ingestion.py  router.py  search.py  timeline.py
app/core/: config.py  exceptions.py  logging.py  observability.py  tracing.py
app/db/: qdrant_client.py
app/models/: analysis.py  document.py  observability.py  search.py  timeline.py
app/services/agent/: analysis_agent.py  graph.py  nodes.py  prompts.py  state.py
app/services/eval/: ragas_eval.py
app/services/ingestion/: chunker.py  cleaner.py  deduplicator.py  embedder.py  pipeline.py
app/services/retrieval/: reranker.py  vector_store.py
data/synthetic/emails/: engineering_approval_blocker.txt  supplier_delay_notification.txt
data/synthetic/pdf/: project_atlas_status_report.txt  project_titan_meeting_transcript.txt  project_zeus_rfq.txt
data/synthetic/spreadsheets/: project_atlas_delivery_tracker.csv  supplier_risk_register.csv
extractors/: base.py  pdf.py  registry.py  spreadsheet.py  text.py
tests/: conftest.py
tests/integration/: test_api.py  test_ingestion_pipeline.py
tests/unit/: test_analysis_agent.py  test_chunker.py  test_cleaner.py  test_deduplicator.py  test_embedder.py  test_hybrid.py  test_nodes.py  test_observability.py  test_ragas_eval.py  test_reranker.py  test_tracing.py
