[project]
name = "manufacturing-risk-navigator"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
   "pydantic>=2.13.4",
   "pydantic-settings>=2.14.2",
   "python-dotenv>=1.2.2",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "extractors"]

[tool.uv]
dev-dependencies = [
    
]
