[project]
name = "manufacturing-risk-navigator"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
   "pydantic>=2.7.0,<3.0.0",
   "pydantic-settings>=2.3.0,<3.0.0",
   "python-dotenv>=1.0.1,<2.0.0",
   # Step 3 — extractors
   "pymupdf>=1.24.0,<2.0.0",       # PDF extraction (fitz)
   "openpyxl>=3.1.0,<4.0.0",       # XLSX extraction
   "python-magic>=0.4.27,<1.0.0",  # MIME type detection from file bytes
   "aiofiles>=23.2.0,<25.0.0",
   "qdrant-client>=1.18.0",
   "langchain-openai>=1.3.2",
   "python-magic-bin>=0.4.14",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "extractors"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0,<9.0.0",
"pytest-asyncio>=0.23.0,<1.0.0",
"pytest-mock>=3.14.0,<4.0.0",
    
]
